@@ -108,7 +108,7 @@
       <class name="test.thread.TrueParallelTest" />
       <class name="test.github765.ExcludeSyntheticMethodsFromTemplateCallsTest"/>
       <class name="test.github1405.TestExclusionOfMainMethod"/>
-      <class name="test.cli.github1517.ExitCodeListenerBehaviorTest"/>
+      <class name="test.cli.CliTest"/>
       <class name="test.thread.ParallelSuiteTest"/>
       <class name="test.simple.IncludedExcludedTest" />
       <class name="test.reports.ReportTest" />
