@@ -1,0 +1,13 @@
+<?xml version="1.0" encoding="UTF-8"?>
+<!DOCTYPE suite SYSTEM "https://testng.org/testng-1.0.dtd">
+<suite name="Default Suite">
+  <test thread-count="5" name="testng_playground">
+    <classes>
+      <class name="test.cli.github2693.TestClassSample">
+        <methods>
+          <include name="test"/>
+        </methods>
+      </class>
+    </classes>
+  </test> <!-- testng_playground -->
+</suite> <!-- Default Suite -->
